@@ -1,50 +1,19 @@
 package com.rodrigofrazao.domain.image;
 
-
-
-import com.rodrigofrazao.domain.complexNumbers.Complex;
-import org.springframework.web.multipart.MultipartFile;
-import sun.misc.BASE64Encoder;
-
 import javax.imageio.ImageIO;
-import java.awt.*;
-import java.awt.color.ColorSpace;
 import java.awt.image.BufferedImage;
-import java.awt.image.ColorConvertOp;
-import java.awt.image.DataBufferByte;
-import java.awt.image.WritableRaster;
-import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.Arrays;
+import java.io.*;
 import java.util.Base64;
 
 import static com.rodrigofrazao.domain.fourierTransform.TwoD_FFT.twoDfft;
-import static java.util.Base64.getEncoder;
-
+import static javax.xml.bind.DatatypeConverter.*;
 
 public class ImageService {
 
-    public BufferedImage complexImageToBufferedImage(ComplexImage pixels) {
-        int height = pixels.getAmplitude().length;
-        int width = pixels.getAmplitude()[0].length;
-
-        BufferedImage b = new BufferedImage(height, width, BufferedImage.TYPE_BYTE_GRAY);
-
-        for(int x = 0; x < height; x++) {
-            for(int y = 0; y < width; y++) {
-                int rgb = (int)pixels.getAmplitude()[x][y]<<16 | (int)pixels.getAmplitude()[x][y] << 8 | (int)pixels.getAmplitude()[x][y];
-                b.setRGB(x, y, rgb);
-            }
-        }
-        return b;
-      //  double[] result = Arrays.stream(pixels.getAmplitude()).flatMapToDouble(Arrays::stream).toArray();
-       // BufferedImage image = new BufferedImage(height,width, BufferedImage.TYPE_BYTE_GRAY);
-        //WritableRaster raster = image.getRaster();
-        //raster.setPixels(0, 0, height, width, result);
-        //image.setData(raster);
-        //return image;
+    public BufferedImage decodeImageFromFrontEnd(String imageString) throws IOException {
+        String base64Image = imageString.split(",")[0];
+        byte[] imageBytes = parseBase64Binary(base64Image);
+        return ImageIO.read(new ByteArrayInputStream(imageBytes));
     }
 
     public ComplexImage frontEndImageToComplexImage(BufferedImage bufferedImage) throws IOException {
@@ -52,17 +21,29 @@ public class ImageService {
         return image.bufferedImageToComplexImage();
     }
 
-
-    public ComplexImage fft(ComplexImage image){
-      return  twoDfft(image.getAmplitude());
-    }
-
-    public String convertComplexImageToFrontEnd(ComplexImage image) throws IOException {
+    public String complexImageToFrontEnd(ComplexImage image) throws IOException {
         BufferedImage bufferedImage = complexImageToBufferedImage(image);
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
         baos.flush();
-        ImageIO.write(bufferedImage,"png",baos);
+        ImageIO.write(bufferedImage, "png", baos);
         return Base64.getEncoder().encodeToString(baos.toByteArray());
+    }
+
+    public BufferedImage complexImageToBufferedImage(ComplexImage pixels) {
+        int height = pixels.getAmplitude().length;
+        int width = pixels.getAmplitude()[0].length;
+        BufferedImage b = new BufferedImage(height, width, BufferedImage.TYPE_BYTE_GRAY);
+        for (int x = 0; x < height; x++) {
+            for (int y = 0; y < width; y++) {
+                int rgb = (int) pixels.getAmplitude()[x][y] << 16 | (int) pixels.getAmplitude()[x][y] << 8 | (int) pixels.getAmplitude()[x][y];
+                b.setRGB(x, y, rgb);
+            }
+        }
+        return b;
+    }
+
+    public ComplexImage fft(ComplexImage image) {
+        return twoDfft(image.getAmplitude());
     }
 
 }
